SERVER-16600: Windows: net stop service does not do clean shutdown